// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event renders correctly with correct url params 1`] = `
<Event
  event={
    Object {
      "artist": Object {
        "title": "test",
      },
      "date": "2020-02-02",
      "title": "test",
    }
  }
>
  <div
    className="event"
  >
    <Link
      to="https://www.google.de/maps/dir//test"
    >
      <a
        href="https://www.google.de/maps/dir//test"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="no-image"
        >
          <Icon
            id="calendar icon"
          >
            <i
              className="fa-calendar icon fa"
            />
          </Icon>
        </div>
      </a>
    </Link>
    <h2
      className="date"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          02.02.2020
        </a>
      </Link>
    </h2>
    <h2
      className="title"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h2>
    <h3
      className="artist"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h3>
  </div>
</Event>
`;

exports[`Event renders correctly with image 1`] = `
<Event
  event={
    Object {
      "artist": Object {
        "title": "test",
      },
      "date": "2020-02-02",
      "imgPath": "test",
      "title": "test",
    }
  }
>
  <div
    className="event"
  >
    <Link
      to="https://www.google.de/maps/dir//test"
    >
      <a
        href="https://www.google.de/maps/dir//test"
        rel="noopener noreferrer"
        target="_blank"
      >
        <Image
          alt="test"
          src="test"
        >
          <img
            alt="test"
            className="image invisible"
            onError={[Function]}
            onLoad={[Function]}
            src="test"
          />
        </Image>
      </a>
    </Link>
    <h2
      className="date"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          02.02.2020
        </a>
      </Link>
    </h2>
    <h2
      className="title"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h2>
    <h3
      className="artist"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h3>
  </div>
</Event>
`;

exports[`Event renders correctly with wrong url params 1`] = `
<Event
  event={
    Object {
      "artist": Object {
        "title": "test",
      },
      "date": "2020-02-02",
      "title": "test",
    }
  }
>
  <div
    className="event"
  >
    <Link
      to="https://www.google.de/maps/dir//test"
    >
      <a
        href="https://www.google.de/maps/dir//test"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="no-image"
        >
          <Icon
            id="calendar icon"
          >
            <i
              className="fa-calendar icon fa"
            />
          </Icon>
        </div>
      </a>
    </Link>
    <h2
      className="date"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          02.02.2020
        </a>
      </Link>
    </h2>
    <h2
      className="title"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h2>
    <h3
      className="artist"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h3>
  </div>
</Event>
`;

exports[`Event renders correctly without url params 1`] = `
<Event
  event={
    Object {
      "artist": Object {
        "title": "test",
      },
      "date": "2020-02-02",
      "title": "test",
    }
  }
>
  <div
    className="event"
  >
    <Link
      to="https://www.google.de/maps/dir//test"
    >
      <a
        href="https://www.google.de/maps/dir//test"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="no-image"
        >
          <Icon
            id="calendar icon"
          >
            <i
              className="fa-calendar icon fa"
            />
          </Icon>
        </div>
      </a>
    </Link>
    <h2
      className="date"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          02.02.2020
        </a>
      </Link>
    </h2>
    <h2
      className="title"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h2>
    <h3
      className="artist"
    >
      <Link
        to="https://www.google.de/maps/dir//test"
      >
        <a
          href="https://www.google.de/maps/dir//test"
          rel="noopener noreferrer"
          target="_blank"
        >
          test
        </a>
      </Link>
    </h3>
  </div>
</Event>
`;
